--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/laptopshop
 spring.datasource.username=root
@@ -6,9 +7,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
 #config spring security
-spring.security.user.name=1
-spring.security.user.password=1
+spring.security.user.name=hoidanit
+spring.security.user.password=123456
 
-# config view engine
+#config view engine
 # spring.mvc.view.prefix=/WEB-INF/view/
 # spring.mvc.view.suffix=.jsp
